Upravena CORS konfiguracia pre podporu viacerych frontend domien
- SecurityConfig: Pouziva environment variable ALLOWED_ORIGINS
- application.yml: Pridana konfiguracia app.cors.allowed-origins
- Umoznuje nastavit povolene domeny cez .env na Railway

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>